# quiz_app

./: .containerignore  .gitignore  AGENTS.md  Containerfile  Improvement_plan.md  Makefile  pyproject.toml  requirements.md  spec.md  tasks.md
.codex/: master.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/plans/: 2026-03-09-answer-review-design.md  2026-03-09-choice-buttons-plan.md  2026-03-09-parser-ui-fixes.md  2026-03-09-ui-table-wrap-fixes.md  2026-03-16-page-title-design.md  2026-03-16-page-title.md
md/: 10A.md  10Q.md  2A.md  2Q.md  4A.md  4Q.md  6A.md  6Q.md  8A.md  8Q.md  README.md
src/quiz_app/: __init__.py  app.py  engine.py  parser.py
tests/: test_app.py  test_engine.py  test_parser.py  test_placeholder.py
